# plane-splitter

./: .travis.yml  Cargo.toml  README.md  poly.ron
data/: poly.ron  poly_vs.glsl
src/: main.rs
