[package]
name = "splitter"
version = "0.1.0"
authors = ["Dzmitry Malyshau <kvark@mozilla.com>"]

[dependencies]
cgmath = {version = "0.15", features = ["mint"]}
euclid = "0.15"
env_logger = "0.4"
mint = "0.4"
plane-split = {path = "../plane-split"}
ron = "0.0.1"
serde = "1"
serde_derive = "1"
three = {path = "../three-rs"}
